--- a/tac/tac.css
+++ b/tac/tac.css
@@ -1,11 +1,52 @@
 body{
     font-weight: 200;
-    padding-top:70px;
+    padding-top: 70px;
 }
 
-#topbar {
-  position: fixed;
-  left:20px;
-  border:1px solid;
-  text-align: center;
+#slogan {
+    font-size:30px;
+}
+#topnav{
+    padding-top:15px;
+    color:white;
+}
+#runbtn{
+    margin-top:0;
+    margin-right:5px;
+}
+@media (min-width:768px)
+{
+    .sidebar{
+        position: fixed;
+        top:70px;
+        left:0;
+        bottom:200px;
+        display:block;
+        padding:20px;
+        overflow-x:hidden;
+        overflow-y:auto;
+        border-right:1px solid #eee;
+        /*background-color:#f5f5f5;
+        border-radius:5px;*/
+
+    }
+}
+.nav-sidebar{
+
+}
+.nav>li{
+    position: relative;
+    display:block;
+    font-size:16px;
+}
+.sub-header{
+    margin-top:50px;
+    padding-bottom:10px;
+    
+}
+.check_box{
+    margin-bottom:10px;
+}
+#main{
+
 }
