--- a/tac/tac.css
+++ b/tac/tac.css
@@ -1,6 +1,6 @@
 body{
     font-weight: 200;
-    padding-top: 70px;
+    padding-top: 100px;
 }
 
 #slogan {
@@ -18,16 +18,17 @@ body{
 {
     .sidebar{
         position: fixed;
-        top:70px;
+        top:100px;
         left:0;
         bottom:0px;
         display:block;
+        z-index: 1000;
         padding:20px;
         overflow-x:hidden;
         overflow-y:auto;
         border-right:1px solid #eee;
-        /*background-color:#f5f5f5;
-        border-radius:5px;*/
+        background-color:#f5f5f5;
+        border-radius:5px;
 
     }
 }
@@ -44,7 +45,7 @@ body{
 .nav>li{
     position: relative;
     display:block;
-    font-size:16px;
+    font-size:15px;
 }
 .sub-header{
     margin-top:50px;
@@ -54,6 +55,6 @@ body{
 .check_box{
     margin-bottom:10px;
 }
-#main{
-
+.navbar-btn{
+    font-size:40px;
 }
