--- a/tac/tac.css
+++ b/tac/tac.css
@@ -23,7 +23,7 @@ body{
         bottom:0px;
         display:block;
         z-index: 1000;
-        padding:10px;
+        padding:10px 0px 10px 0px;
         overflow-x:hidden;
         overflow-y:auto;
         border-right:1px solid #eee;
@@ -58,10 +58,22 @@ body{
 .navbar-btn{
     font-size:40px;
 }
-#main,#progress,#queue,#history,#env{
-    padding-top:120px;
+#progress,#queue,#history,#env{
+    padding-top:110px;
 }
-
+#main{
+    padding-top:80px;
+}
 .inline_header{
     display:inline;
+}
+#banner{
+    border-radius: 5px 5px 5px 5px;
+    -moz-border-radius: 5px 5px 5px 5px;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border: 0px solid #000000;
+}
+#disney{
+    margin-bottom:0;
+    padding-bottom: 0;
 }
