--- a/tac/tac_stats.css
+++ b/tac/tac_stats.css
@@ -4,15 +4,16 @@ body {
 }
 
 .wrapper {
-  border:1px solid;
+  
   margin:0;
+  box-shadow: inset 0px 1px 0px 0px rgba(0,0,0,0.05), inset 0px 2px 3px 0px rgba(0,0,0,0.1);
 
 }
 
 #wrapper1{
   text-align: center;
-  padding-top:50px;
-  padding-bottom:30px;
+  padding-top:80px;
+  padding-bottom:80px;
 }
 
 #wrapper2,#wrapper3{
@@ -22,4 +23,60 @@ body {
 #wrapper2{
   background-color: #fafafa;
   text-shadow: 1px 1px 0px #fff;
+  padding:80px 20px 80px 20px;
+}
+#wrapper3{
+  background-color: #f4f4f4;
+  text-shadow: 1px 1px 0px #fff;
+  padding-top:50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+.box_list{
+  text-align: left;
+}
+.box{
+  border:2px solid #4176CA !important;
+  background-image: none !important;
+  background-color: #fff;
+  padding:5px;
+  border-radius: 8px 8px 8px 8px;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  height:350px;
+  
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+
+}
+#stat_container{
+  margin:0;
+  padding-left:0;
+  padding-right:0;
+}
+.stat_box{
+  width:80%;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:50px;
+  
+  border:2px solid #4176CA !important;
+  background-image: none !important;
+  background-color: #fff;
+
+  border-radius: 8px 8px 8px 8px;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  height:auto;
+  
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+}
+table{
+  margin-bottom: 0 !important;
+}
+#title_header{
+  font-weight: 900;
 }
