--- a/tac/tac.css
+++ b/tac/tac.css
@@ -83,4 +83,9 @@ body{
 }
 #greeting{
     margin-left:15px;
+    margin-top:10px;
+    margin-bottom:20px;
+}
+.dropdown-menu{
+    min-width: 0 !important;
 }
