--- a/tac/tac_stats.css
+++ b/tac/tac_stats.css
@@ -1,26 +1,23 @@
 body {
   font-weight:300;
-  padding-top:45px;
+  padding-top:75px;
 }
 
 .wrapper {
-  
-  margin:0;
   box-shadow: inset 0px 1px 0px 0px rgba(0,0,0,0.05), inset 0px 2px 3px 0px rgba(0,0,0,0.1);
-
 }
 
 #wrapper1{
   text-align: center;
-  padding-top:80px;
+  padding-top:50px;
   padding-bottom:80px;
 }
 
-#wrapper2,#wrapper3{
+#overall,#wrapper3{
   background-image: url('bg.png');
 }
 
-#wrapper2{
+#overall{
   background-color: #fafafa;
   text-shadow: 1px 1px 0px #fff;
   padding:80px 20px 80px 20px;
@@ -28,7 +25,7 @@ body {
 #wrapper3{
   background-color: #f4f4f4;
   text-shadow: 1px 1px 0px #fff;
-  padding-top:50px;
+  padding-top:80px;
   padding-bottom: 50px;
   text-align: center;
 }
@@ -60,6 +57,8 @@ body {
   margin-left:auto;
   margin-right:auto;
   margin-bottom:50px;
+  padding-top:50px;
+  padding-bottom:50px;
   
   border:2px solid #4176CA !important;
   background-image: none !important;
