--- a/tac/tac_stats.css
+++ b/tac/tac_stats.css
@@ -13,16 +13,16 @@ body {
   padding-bottom:80px;
 }
 
-#overall,#wrapper3{
+#summary,#detail{
   background-image: url('bg.png');
 }
 
-#overall{
+#summary{
   background-color: #fafafa;
   text-shadow: 1px 1px 0px #fff;
   padding:80px 20px 80px 20px;
 }
-#wrapper3{
+#detail{
   background-color: #f4f4f4;
   text-shadow: 1px 1px 0px #fff;
   padding-top:80px;
@@ -57,8 +57,6 @@ body {
   margin-left:auto;
   margin-right:auto;
   margin-bottom:50px;
-  padding-top:50px;
-  padding-bottom:50px;
   
   border:2px solid #4176CA !important;
   background-image: none !important;
