--- a/tac/tac_stats.css
+++ b/tac/tac_stats.css
@@ -20,7 +20,7 @@ body {
 #summary{
   background-color: #fafafa;
   text-shadow: 1px 1px 0px #fff;
-  padding:80px 20px 80px 20px;
+  padding:80px 40px 80px 40px;
 }
 #detail{
   background-color: #f4f4f4;
@@ -33,7 +33,7 @@ body {
   text-align: left;
 }
 .box{
-  border:2px solid #4176CA !important;
+  border:2px solid #428bca !important;
   background-image: none !important;
   background-color: #fff;
   padding:5px;
@@ -57,8 +57,9 @@ body {
   margin-left:auto;
   margin-right:auto;
   margin-bottom:50px;
+  text-align:left !important;
   
-  border:2px solid #4176CA !important;
+  border:1px solid #428bca !important;
   background-image: none !important;
   background-color: #fff;
 
@@ -76,4 +77,7 @@ table{
 }
 #title_header{
   font-weight: 900;
+}
+.navbar-brand{
+  font-size:26px !important;
 }
