empty test request form will now be rejected and alerted via javascript

--- a/tac/tac.css
+++ b/tac/tac.css
@@ -87,5 +87,7 @@ body{
     margin-bottom:20px;
 }
 .dropdown-menu{
-    min-width: 0 !important;
+    /*min-width: 0 !important;*/
+    right: auto;
+    left: 0;
 }
