refined stats page

--- a/tac/tac_stats.css
+++ b/tac/tac_stats.css
@@ -13,7 +13,7 @@ body {
   padding-bottom:80px;
 }
 
-#summary,#detail{
+#summary,#detail,#overview{
   background-image: url('bg.png');
 }
 
@@ -83,4 +83,28 @@ table{
 }
 #sub_title{
   font-size:15px;
+}
+#overview{
+  background-color: #303030;
+  color: #999;
+  /*color: #fff;*/
+  text-shadow: -1px -1px 0px #181818;
+  padding:50px 150px 50px 150px;
+  
+}
+#overview>h3,#any{
+  color: #fff;
+}
+.overview_list{
+  margin-left:auto;
+  margin-right:auto;
+  padding-left:50px;
+  padding-right:180px;
+}
+.overview_list> p{
+  font-size:15px;
+}
+.overview_list>ul>li{
+  font-size:15px;
+  margin-bottom:10px;
 }
